--- a/homepage/index.html
+++ b/homepage/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="./favicon.ico">
 
-    <title>轮播模板</title>
+    <title>Best</title>
     
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="carousel.css" rel="stylesheet">
